# clade

./: .codecov.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_DE_CONDUITE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE.txt  NOTICE  README.fr.md  README.md  SECURITY.md  codecov.yml  pyproject.toml
.gitlab/issue_templates/: bug.md  decision.md  feature.md  maintenance.md
.gitlab/merge_request_templates/: default.md
.tox-config/: coverage-version.txt  versions.txt
.tox-config/requirements/: base-dj52.txt  base-djlatest.txt  full.txt  type-check.txt
.tox-config/scripts/: coverage.sh  test.sh
src/clade/: __init__.py  apps.py  models.py
tests/: settings.py
