# =============================================================================
# pyproject.toml — Hierarchy project
# Single configuration file for packaging, toolchain and test orchestration.
#
# Refs: DD-007 (SemVer), DD-008 (Django add-on), DD-009 (toolchain)
# GitLab:
#  https://gitlab.com/open-works/clade/-/work_items/6
#  https://gitlab.com/open-works/clade/-/work_items/7
#  https://gitlab.com/open-works/clade/-/work_items/9
# =============================================================================

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clade"]


# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------
[project]
name            = "django-clade"
version         = "0.0.5"
description     = "A Django module for managing hierarchical data models through a node tree, with kinship relationship queries and optional database-native optimisations."
readme          = "README.md"
license         = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors         = [
    { name = "open-works", email = "" },
]
keywords = [
    "django",
    "clade",
    "tree",
    "ltree",
    "kinship",
    "adjacency",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "django>=5.2",
]

[project.urls]
Repository = "https://gitlab.com/open-works/clade"
Issues     = "https://gitlab.com/open-works/clade/-/issues"
Changelog  = "https://gitlab.com/open-works/clade/-/blob/main/CHANGELOG.md"
Mirror     = "https://github.com/open-works/clade"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "django-stubs",
    "bandit",
    "tox",
    "tox-uv",
    "pytest",
    "pytest-django",
    "pytest-cov",
]


# -----------------------------------------------------------------------------
# Ruff — lint + format
# Refs: https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 88
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "S",    # flake8-bandit (subset)
    "T20",  # flake8-print
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",  # assert — acceptable in tests
    "DJ001", # null=True on string fields — reviewed case by case
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"tests/settings.py" = ["S105"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false


# -----------------------------------------------------------------------------
# Pyright — type checking
# Refs: https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.pyright]
include               = ["src/clade"]
pythonVersion         = "3.10"
typeCheckingMode      = "strict"
djangoSettingsModule  = "tests.settings"
reportMissingImports  = true
reportMissingTypeStubs = false


# -----------------------------------------------------------------------------
# Bandit — security analysis
# Refs: https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.bandit]
targets = ["src/clade"]
skips   = ["B101"]


# -----------------------------------------------------------------------------
# pytest
# Refs: 
#  https://gitlab.com/open-works/clade/-/work_items/6
#  https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files           = ["test_*.py", "*_test.py"]
python_classes         = ["Test*"]
python_functions       = ["test_*"]
pythonpath             = ["."]
testpaths              = ["tests"]
addopts                = [
    "--strict-markers",
    "--import-mode=importlib",
    "-v",
]


# -----------------------------------------------------------------------------
# Coverage
# Refs: 
#  https://gitlab.com/open-works/clade/-/work_items/6
#  https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/clade"]
branch = true
omit   = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]


# -----------------------------------------------------------------------------
# tox — orchestration via tox-uv (option B: DJANGO_VERSION variable)
# Full matrix runs on CI tag only.
# Local: tox -e lint,type,security  or  tox -e py312-dj52  or  tox
# Refs: 
#  https://gitlab.com/open-works/clade/-/work_items/6
#  https://gitlab.com/open-works/clade/-/work_items/9
# -----------------------------------------------------------------------------
[tool.tox]
requires     = ["tox>=4", "tox-uv"]
env_list     = [
    "lint",
    "type",
    "security",
    # Django 5.2 LTS — active (v0.1.0 → v0.8.0)
    "py310-dj52",
    "py311-dj52",
    "py312-dj52",
    "py313-dj52",
    # Django 6.0+ — activate at v0.9.0 (transition phase)
    # "py312-djlatest",
    # "py313-djlatest",
    # "py314-djlatest",
]

[tool.tox.env_run_base]
runner   = "uv-venv-runner"
setenv   = { DJANGO_SETTINGS_MODULE = "tests.settings" }
commands = [
    ["pytest",
     "--cov=src/clade",
     "--cov-report=term-missing",
     "--cov-report=xml:{toxworkdir}/coverage.xml"],
]

# --- Lint ---
[tool.tox.env.lint]
description = "Ruff — lint and format check"
deps        = ["-r .tox-config/requirements/linter.txt"]
allowlist_externals = ["ruff"]
commands    = [
    ["ruff", "check", "src/", "tests/"],
    ["ruff", "format", "--check", "src/", "tests/"],
]

# --- Type checking ---
[tool.tox.env.type]
description = "Pyright — static type checking"
deps        = ["-r .tox-config/requirements/type-check.txt"]
allowlist_externals = ["pyright"]
commands    = [["pyright"]]

# --- Security ---
[tool.tox.env.security]
description = "Bandit — security analysis"
deps        = ["-r .tox-config/requirements/linter.txt"]
allowlist_externals = ["bandit"]
commands    = [["bandit", "-c", "pyproject.toml", "-r", "src/clade"]]

# --- Django 5.2 LTS ---
[tool.tox.env."py310-dj52"]
description = "pytest — Python 3.10 × Django 5.2 LTS"
base_python = "python3.10"
deps        = ["-r .tox-config/requirements/base-dj52.txt"]

[tool.tox.env."py311-dj52"]
description = "pytest — Python 3.11 × Django 5.2 LTS"
base_python = "python3.11"
deps        = ["-r .tox-config/requirements/base-dj52.txt"]

[tool.tox.env."py312-dj52"]
description = "pytest — Python 3.12 × Django 5.2 LTS"
base_python = "python3.12"
deps        = ["-r .tox-config/requirements/base-dj52.txt"]

[tool.tox.env."py313-dj52"]
description = "pytest — Python 3.13 × Django 5.2 LTS"
base_python = "python3.13"
deps        = ["-r .tox-config/requirements/base-dj52.txt"]

# --- Django latest ---
# Django 6.0+ does not support Python 3.10 or 3.11
[tool.tox.env."py312-djlatest"]
description = "pytest — Python 3.12 × Django latest (6.0+)"
base_python = "python3.12"
deps        = ["-r .tox-config/requirements/base-djlatest.txt"]

[tool.tox.env."py313-djlatest"]
description = "pytest — Python 3.13 × Django latest (6.0+)"
base_python = "python3.13"
deps        = ["-r .tox-config/requirements/base-djlatest.txt"]

[tool.tox.env."py314-djlatest"]
description = "pytest — Python 3.14 × Django latest (6.0+)"
base_python = "python3.14"
deps        = ["-r .tox-config/requirements/base-djlatest.txt"]

# --- Coverage locale ---
[tool.tox.env.coverage]
description = "Generate full coverage report (HTML + XML)"
base_python = "python3.12"
deps        = ["-r .tox-config/requirements/base-dj52.txt"]
allowlist_externals = ["pytest", "mkdir"]
commands    = [
    ["mkdir", "-p", "{toxinidir}/coverage"],
    ["pytest",
     "--cov=src/clade",
     "--cov-append",
     "--cov-report=term-missing",
     "--cov-report=xml:{toxinidir}/coverage/coverage.xml",
     "--cov-report=html:{toxinidir}/coverage/coverage_html"],
]

# --- Pre-push local workflow ---
[tool.tox.env.pre-push]
description = "Full local workflow before push (quality + tests + coverage)"
deps        = ["-r .tox-config/requirements/full.txt"]
allowlist_externals = ["ruff", "pyright", "bandit", "bash"]
passenv     = ["HOME", "USER"]
commands    = [
    ["ruff", "check", "src/", "tests/"],
    ["ruff", "format", "--check", "src/", "tests/"],
    ["pyright"],
    ["bandit", "-c", "pyproject.toml", "-r", "src/clade"],
    ["bash", "{toxinidir}/.tox-config/scripts/test.sh"],
    ["bash", "{toxinidir}/.tox-config/scripts/coverage.sh"],
]
